style(feature__md): fix white space
This commit is to remove white spaces in the feature info and image
blocks for md screens.

The change will ensure that the two blocks on the page renders well on
md devices and window or screen sizes.

--- a/style.css
+++ b/style.css
@@ -1794,7 +1794,7 @@ vertical-align: top;
   width: 100%;
   justify-content: center;
   align-items: center;
-  padding-top: 5rem;
+  padding-top: 3rem;
 }
 
 .main__feature {
@@ -1803,7 +1803,8 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
-  gap: 4.5rem;
+  gap: 1.5rem;
+  margin-bottom:3rem;
 }
 
 .feature__image-block {
@@ -1834,7 +1835,7 @@ vertical-align: top;
 }
 
 .feature__info-heading {
-  font-size: 2.7rem;
+  font-size: 2.8rem;
   color: #000000;
   font-weight: 600;
   line-height:1.2;
@@ -1848,7 +1849,7 @@ vertical-align: top;
 }
 
 .feature__info-text {
-  font-size: 1.8rem;
+  font-size: 2rem;
 }
 
 .feature__link-block {
@@ -1859,7 +1860,7 @@ vertical-align: top;
 }
 
 .feature__link {
-  font-size: 1.7rem;
+  font-size: 2rem;
   text-decoration: underline;
   font-weight:600;
 }
